# FaceRecognitionInRealTime

./: .gitignore  FolderStructure.md  README.md  SHIP_TODO.md  main.py
face_access_app/: README.md  enroll.py  face_pipeline.py  live_verifier.py  pyproject.toml  storage.py  verifier.py
face_access_app/face_recognition.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
face_access_app/references/: girlfriend_reference.npz
frontend/: README.md  TODO.md  app.js  camera.html  camera.js  failed.html  index.html  styles.css  wishes.html
python/: .env  .env.example  README.md  pyproject.toml
python/face_access_app/: README.md  __init__.py  enroll.py  face_pipeline.py  live_verifier.py  storage.py  verifier.py
python/face_access_app/references/: girlfriend_reference.npz  me_reference.npz
python/forgf_backend/: README.md  __init__.py  config.py  main.py  runtime.py
python/forgf_backend/api/: __init__.py  routes.py
python/forgf_backend/schemas/: __init__.py  requests.py  responses.py
python/forgf_backend/services/: __init__.py  face_service.py  log_service.py  reference_service.py
python/forgf_backend/templates/: admin_login.html  admin_logs.html
python/forgf_backend/utils/: __init__.py  client.py  errors.py  images.py
