[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "face-recognition"
version = "0.1.0"
description = "Face recognition enrollment and verification experiments"
requires-python = ">=3.13"
dependencies = [
    "deepface>=0.0.99",
    "matplotlib>=3.10.9",
    "numpy>=2.4.0",
    "opencv-python>=4.13.0.92",
    "retina-face>=0.0.17",
    "tf-keras>=2.21.0",
]

[project.scripts]
face-enroll = "enroll:main"
face-verify = "verifier:main"
face-live = "live_verifier:main"

[tool.setuptools]
py-modules = ["enroll", "verifier", "live_verifier", "face_pipeline", "storage"]
