[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "forgf-python"
version = "0.1.0"
description = "Shared Python workspace for the ForGF face app and backend"
requires-python = ">=3.13"
dependencies = [
    "deepface>=0.0.99",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.0",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.20",
    "retina-face>=0.0.17",
    "tf-keras>=2.21.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
face-enroll = "face_access_app.enroll:main"
face-verify = "face_access_app.verifier:main"
face-live = "face_access_app.live_verifier:main"
forgf-backend = "forgf_backend.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["face_access_app*", "forgf_backend*"]
